fixed how keen select button font and text wrap

--- a/src/app/onboarding/how-keen/page.module.css
+++ b/src/app/onboarding/how-keen/page.module.css
@@ -1,6 +1,6 @@
 .onboardinghowkeenselectbutton {
     border: 2px solid rgba(218, 245, 254, 1);
-    width: 327px;
+    width: 350px;
     height: 84px;
     padding: 24px 20px 24px 20px;
     border-radius: 40px;
@@ -15,14 +15,14 @@
     text-align: left;
     margin: 0px;
 }
-.onboardinghowkeenselectbutton > p:nth-child(1) {
+.howkeenselectbuttonheadingtext {
     color: rgba(0, 0, 0, 1);
     font-size: 14px;
     font-weight: 500;
     line-height: 17px;
     letter-spacing: 0em;
 }
-.onboardinghowkeenselectbutton > p:nth-child(2) {
+.howkeenselectbuttoninfotext {
     color: rgba(122, 118, 118, 1);
     font-size: 16px;
     font-weight: 500;
